# sklearn-crfsuite

./: .gitignore  README.md  pyproject.toml  setup.py
crf_tagger/: __init__.py  _fileresource.py  compat.py  estimator.py  metrics.py  scorers.py  trainer.py  utils.py
sklearn_crfsuite/: estimator.py
