[tool.poetry]
name = "crf_tagger"
version = "0.1.4"
description = "CRF tagger"
authors = ["severinsimmler <s.simmler@snapaddy.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.0"
python-crfsuite = "^0.8.3"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
